--- a/configs/rpi_4_defconfig
+++ b/configs/rpi_4_defconfig
@@ -18,6 +18,7 @@ CONFIG_PREBOOT="pci enum; usb start;"
 CONFIG_SYS_PBSIZE=1049
 # CONFIG_DISPLAY_CPUINFO is not set
 # CONFIG_DISPLAY_BOARDINFO is not set
+CONFIG_LAST_STAGE_INIT=y
 CONFIG_MISC_INIT_R=y
 CONFIG_SYS_PROMPT="U-Boot> "
 CONFIG_CMD_DFU=y
@@ -65,3 +66,19 @@ CONFIG_SYS_WHITE_ON_BLACK=y
 CONFIG_VIDEO_BCM2835=y
 CONFIG_CONSOLE_SCROLL_LINES=10
 CONFIG_PHYS_TO_BUS=y
+CONFIG_OF_LIBFDT_OVERLAY=y
+
+CONFIG_GENERATE_ACPI_TABLE=y
+CONFIG_ACPI=y
+CONFIG_CMD_ACPI=y
+CONFIG_BOOTM_EFI=y
+CONFIG_CMD_BOOTEFI=y
+CONFIG_LOG=y
+CONFIG_LOG_MAX_LEVEL=9
+CONFIG_LOG_DEFAULT_LEVEL=8
+CONFIG_LOGLEVEL=8
+CONFIG_LOGF_LINE=y
+CONFIG_LOGF_FUNC=y
+CONFIG_EFI_VARIABLE_NO_STORE=y
+#CONFIG_EFI_RT_VOLATILE_STORE=y
+CONFIG_HEXDUMP=y
