mach-bcm283x: Write ACPI tables when enabled
Signed-off-by: Patrick Rudolph <patrick.rudolph@9elements.com>

--- a/arch/arm/mach-bcm283x/Makefile
+++ b/arch/arm/mach-bcm283x/Makefile
@@ -4,3 +4,4 @@
 
 obj-$(CONFIG_BCM2835) += lowlevel_init.o
 obj-y	+= init.o reset.o mbox.o msg.o phys2bus.o
+obj-$(CONFIG_GENERATE_ACPI_TABLE) += acpi.o
