--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -23,11 +23,10 @@ jobs:
         shell: bash
         working-directory: ./u-root
         env:
-          GOARCH: arm64
           GOFLAGS: "-buildvcs=false"
         run: |
           go build .
-          ./u-root -defaultsh gosh -o initramfs.cpio boot coreboot-app ./cmds/core/* ./cmds/boot/*
+          GOARCH=arm64 ./u-root -defaultsh gosh -o initramfs.cpio boot coreboot-app ./cmds/core/* ./cmds/boot/*
       - name: Archive artifacts
         uses: actions/upload-artifact@v3
         with:
